# Maturitaetsarbeit

./: .gitignore  README.md  gpu_undistort.m
arduino_code/: Cargo.toml  README.md
arduino_code/cpp/acc_test/: AccelStepper.cpp  AccelStepper.h  acc_test.ino
arduino_code/cpp/calibration/src/: main.cpp
arduino_code/cpp/grbl/: config.h
arduino_code/cpp/ir_sensor/: ir_sensor.ino
arduino_code/cpp/ltc_sensor/: todos.md
arduino_code/cpp/ltc_sensor/src/: dc_motor.cpp  dc_motor.h  main.cpp  stepper.cpp  stepper.h
arduino_code/cpp/rs485_test/: dc_motor.ino  ir_sensor.ino  rs485_test.ino
arduino_code/cpp/stepper_motor/: ir_sensor.ino  stepper_motor.ino
arduino_code/src/: lib.rs  pid.rs  stepper.rs
code/: Cargo.toml  README.md  app_backup.ron  build.rs  correct_images.py  notes.md
code/java_ma/: build.gradle
code/java_ma/src/main/java/ec/: Contestant.java  EvolutionaryComputation.java
code/java_ma/src/main/java/ec/datasets/: AllColorsTrainer.java
code/java_ma/src/main/java/nn/: Matrix.java  Matrix_old.java  NeuralNetwork.java  Pair.java  Plot.java  TrainingSet.java  Utility.java
code/java_ma/src/main/java/nn/datasets/: AllColors.java  DetectLine.java  DetectRed.java  GreenBlue.java  NNTest.java  Turn.java  TurnIter.java  XOR.java
code/java_ma/src/main/java/nn/gpu/: DSigmoid.java  GPUUtils.java  Gradient.java  NeuralNetworkOpenCL.java  NeuralNetworkOpenCL2.java  NeuralNetworkOpenCL3.java  Utils.java
code/java_ma/src/main/java/nn/gpu_tests/: GPUTest1.java  Test2.java  Test3.java  Test4.java
code/java_ma/src/main/java/nn/img_processing/: ImageRotator.java  ReadImg.java
code/java_ma/src/main/java/numpy/wrappers/: JavaByteArrayWrapper.java  JavaDoubleArrayWrapper.java  JavaFloatArrayWrapper.java  JavaLongArrayWrapper.java  JavaShortArrayWrapper.java
code/python_code_ma/: ball_gui.py  compute_real_world_coords.py  convert_to_mp4.py  gen_training_data.py  grad_cam_test.py  ilena_analysis.py  nn_visulation.py  read_shared_memory.py  regression.py  show_image.py  stats.py  tf_ball_detection_train.py  tf_classifier_fiducial.py  tf_classify.py  tf_detect_ball.py  tf_detect_coords.py  tf_detect_player.py  tf_evaluate.py  tf_gen_nn_model_image.py  tf_get_fid_data.py  tf_load_save.py  tf_load_training_data.py  tf_predict.py  tf_predict_coords.py  tf_test.py  tf_train.py
code/shaders/: debayer.metal
code/src/: arduino_com.rs  ball.rs  cam_thread.rs  compute_rl_coords.rs  detect_player.rs  image_utils.rs  lib.rs  live_feed.rs  plot.rs
code/src/gpu/: Cargo.toml
code/src/gpu/shaders/: add.metal
code/src/gpu/src/: lib.rs
com/src/: commands.rs
documentation/: build.sh  doc.ps1
documentation/src/: appendix.tex  calculations.tex  conclusion.tex  construction.tex  data_matracies.tex  electronics.tex  foosball_system.tex  introduction.tex  main.tex  mechanics.tex  objectives.tex  results.tex  software.tex  sources.bib
documentation/src/poster/: ivtposter-sample.tex  ivtposter.cls  poster.tex  poster_impuls.tex  poster_test.tex
notes/: notes.md
