[package]
name = "matura"
version = "1.2.0"
edition = "2021"

[dependencies]
image = "0.24.8"
imageproc = "0.23.0"
#cameleon = { version = "0.1.10", features = ["libusb"] }
#cameleon = { git = "https://github.com/cameleon-rs/cameleon/", branch = "fix-clippy-1.79", features = ["libusb"] }
cameleon = { path = "./cameleon/cameleon", features = ["libusb"] }
serialport = "3.3.0"
nalgebra = "0.26.0"
rayon = "1.5.1"
serde = { version = "1.0.130", features = ["derive"] }

com = { path = "../com" }

egui = { version = "0.29.1" }
eframe = { version = "0.29.1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
regex = "1.10.6"
chrono = "0.4.38"
egui_extras = "0.29.1"

[profile.release]
debug = 1

[workspace]
members = ["./src/gpu"]
