[package]
name = "matura"
version = "1.2.0"
edition = "2021"

[dependencies]
image = "0.24.8"
imageproc = "0.23.0"
cameleon = { version = "0.1.10", features = ["libusb"] }
cameleon-genapi = "0.1.14"
#cameleon = { git = "https://github.com/cameleon-rs/cameleon/", branch = "fix-clippy-1.79", features = ["libusb"] }
#cameleon = { path = "./cameleon/cameleon", features = ["libusb"] }
serialport = "3.3.0"
nalgebra = "0.26.0"
rayon = "1.5.1"
serde = { version = "1.0.130", features = ["derive"] }
indicatif = "0.18.2"
egui_plot = "0.34.0"
vimba-sys = "0.2.0"

#com = { path = "../com" }

egui = { version = "0.33.0" }
eframe = { version = "0.33.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
regex = "1.10.6"
chrono = "0.4.38"
egui_extras = "0.27.1"
atomic_float = "1.1.0"
env_logger = "0.11.8"

rustyline = "17.0.2"
anyhow = "1.0.98"

metal = "0.24"  # Rust bindings to Metal API; cargo install if needed
objc = "0.2"    # For objc runtime (Metal uses it)
cocoa = "0.24"
once_cell = "1.19"  # For thread-safe lazy init (Sync/Send safe)
# Remove lazy_static if present

[build-dependencies]
cc = "1.0"  # To compile Metal shader during build

[profile.release]
debug = 1

#[workspace]
#members = ["./src/gpu"]
